all blocks and adaptive complited

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="page-header header">
       <div class="container">
-        <div class="header__top top">
+        <div class="header__top">
           <nav class="header__nav">
             <img
               class="header__burger"
@@ -192,24 +192,174 @@
 
 
     <footer class="footer">
-      <!-- <div class="footer__container container">
-        <div class="footer__logo">
-          <img
-            class="footer__site-logo"
-            src="./icons/site_logo.png"
-            alt="NAMU logo"
-          >
-          <div class="footer__social">
-            <img class="footer__facebook" src="./icons/Facebook.png" alt="facebook icon">
-            <img class="footer__instagram" src="./icons/instagram.png" alt="instagram icon">
+      <div class="footer__container container">
+        <div class="footer__content">
+
+          <div class="footer__wrapper wrapper">
+
+            <div class="footer__logo">
+              <img
+                class="footer__site-logo"
+                src="./icons/site_logo.png"
+                alt="NAMU logo"
+              >
+              <div class="footer__sociale">
+                <img
+                  class="footer__facebook"
+                  src="./icons/Facebook.png"
+                  alt="facebook icon">
+                <img
+                  class="footer__instagram"
+                  src="./icons/instagram.png"
+                  alt="instagram icon">
+              </div>
+            </div>
+
+            <div class="footer__schedule schedule">
+              <h4 class="schedule__title">
+                Графік роботи:
+              </h4>
+              <div class="schedule__list">
+                <div class="schelule__period">
+                  <span class="schedule__time">
+                    12:00 — 20:00
+                  </span>
+                  <span class="schedule__day">
+                    середа
+                  </span>
+                </div>
+                <div class="schelule__period">
+                  <span class="schedule__time">
+                    12:00 — 20:00
+                  </span>
+                  <span class="schedule__day">
+                    четвер
+                  </span>
+                </div>
+                <div class="schelule__period">
+                  <span class="schedule__time">
+                    12:00 — 20:00
+                  </span>
+                  <span class="schedule__day">
+                    п'ятниця
+                  </span>
+                </div>
+                <div class="schelule__period">
+                  <span class="schedule__time">
+                    11:00 — 19:00
+                  </span>
+                  <span class="schedule__day">
+                    субота
+                  </span>
+                </div>
+                <div class="schelule__period">
+                  <span class="schedule__time">
+                    11:00 — 19:00
+                  </span>
+                  <span class="schedule__day">
+                    неділя
+                  </span>
+                </div>
+              </div>
+              <div class="schelule__text">
+                Вихідні понеділок, вівторок.<br>Каса припиняє роботу за 1 годину до закриття музею.
+              </div>
+            </div>
+
+            <div class="footer__contacts contacts">
+              <h4 class="contacts__title">
+                Контакти:
+              </h4>
+              <div class="contacts__address">
+                вул. М. Грушевського, 6;<br>Київ, 01001
+              </div>
+              <a
+                class="contacts__link"
+                type="tel"
+                href="tel:+38 (044) 278-13-57">
+                тел. +38 (044) 278-13-57
+              </a>
+              <a
+                class="contacts__link"
+                type="fax"
+                href="fax:+38 (044) 278-74-54">
+                факс +38 (044) 278-74-54
+              </a>
+              <a
+                class="contacts__link"
+                type="email"
+                href="email:info@namu.kiev.ua">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+
           </div>
-        </div>
 
-        <div class="footer__schedule schelule">
-          <h4 class="schedule__title">Графік роботи</h4>
+          <div class="footer__divider"></div>
+
+          <div class="footer__nav">
+            <nav class="footer__nav-right">
+              <ul class="footer__nav-list">
+                <li>
+                  <a class="footer__nav-link" href="#gallery">
+                    Галерея
+                  </a>
+                </li>
+                <li>
+                  <a class="footer__nav-link" href="#">
+                    Виставки та події
+                  </a>
+                </li>
+                <li>
+                  <a class="footer__nav-link" href="#">
+                    Відвідування
+                  </a>
+                </li>
+                <li>
+                  <a class="footer__nav-link" href="#">
+                    Стати нашим другом
+                  </a>
+                </li>
+              </ul>
+            </nav>
+
+            <nav class="footer__nav-left">
+              <ul class="footer__nav-list">
+                <li>
+                  <a class="footer__nav-link" href="#">
+                    Про нас
+                  </a>
+                </li>
+                <li>
+                  <a class="footer__nav-link" href="#">
+                    Магазин
+                  </a>
+                </li>
+                <li>
+                  <a class="footer__nav-link" href="#">
+                    Блог
+                  </a>
+                </li>
+                <li>
+                  <a class="footer__nav-link" href="#">
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+
+          </div>
 
         </div>
-      </div> -->
+        <div class="footer__copyright">
+          <span>
+            Copyright © 2021. All Rights Reserved.
+          </span>
+          <span>
+            Designed by Zhyriada Marina
+          </span>
+        </div>
+      </div>
     </footer>
 
 
