page was refreshed

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
 
   <body>
 
-    <section class="header">
-
+  <section class="page">
+    <section class="header page__header">
       <nav role="navigation" class="navigation">
         <div id="menuToggle">
           <input type="checkbox">
@@ -25,11 +25,21 @@
           <span></span>
 
           <ul id="menu">
-            <a href="#"><li>Галерея</li></a>
-            <a href="#"><li>Вистаки та події</li></a>
-            <a href="#"><li>Відвідування</li></a>
-            <a href="#"><li>Стати нашим другом</li></a>
-            <a href="№"><li>Про нас</li></a>
+            <li>
+              <a href="#">Галерея</a>
+            </li>
+            <li>
+              <a href="#">Вистаки та події</a>
+            </li>
+            <li>
+              <a href="#">Відвідування</a>
+            </li>
+            <li>
+              <a href="#">Стати нашим другом</a>
+            </li>
+            <li>
+              <a href="#">Про нас</a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -41,7 +51,10 @@
       <div class="header__content">
         <div class="header__main-title">
           <h2 class="header__title">
-            ХУДОЖ<span class="header__stroke">НІЙ</span>
+            ХУДОЖ
+            <span class="header__stroke">
+              НІЙ
+            </span>
             <br>
             МУЗЕЙ
           </h2>
@@ -53,7 +66,7 @@
             <img
             class="ticket__svg"
             src="./images/button-arrow.svg"
-            alt=""
+            alt="ticket-arrow"
             >
           </a>
         </div>
@@ -64,7 +77,7 @@
       </div>
     </section>
 
-    <section class="main-events container inner-padding">
+    <section class="main-events page__main-events container inner-padding">
       <h2 class="main-events__header">Актуальні події</h2>
 
       <div class="wrap-event">
@@ -72,7 +85,7 @@
         <img
           class="cell-fit cell-fit--1"
           src="./images/RectangleEvent1_870.png"
-          alt=""
+          alt="image"
         >
 
         <div class="event__content content content--1">
@@ -91,7 +104,7 @@
         <img
           class="cell-fit cell-fit--2"
           src="./images/RectangleEvent2_870.png"
-          alt=""
+          alt="nature-image"
         >
 
         <div class="event__content content content--2">
@@ -112,7 +125,7 @@
 
     </section>
 
-    <section class="lection">
+    <section class="lection page__lection">
       <div class="lection__nature nature">
 
         <div class="nature__part part">
@@ -120,209 +133,192 @@
             <p class="info__name">ВИСТАВКА</p>
             <p class="info__date">26.08/29.11.2019</p>
           </div>
-
           <h3 class="nature__header">Від класицизму до романтизму</h3>
-
         </div>
-
-
       </div>
-
     </section>
 
-
-    <section class="galery container inner-padding">
-      <h2 class="galery__header">Галерея</h2>
-      <div class="galery__album album">
-        <div class="image-cell album__image-cell--1">
-          <picture>
-
-            <source srcset="./images/RectangleEvent(1)1280screen.png" media="(min-width: 1024px)">
-            <img
-              class="cell-fit cell-fit--size"
-              src="./images/RectangleEvent(1)1280screen.png"
-              alt=""
-            >
-          </picture>
-
-        </div>
-        <div class="image-cell album__image-cell--2">
-          <picture>
-            <source srcset="./images/RectangleEvent(2)1280screen.png" media="(min-width: 1024px)">
-            <img
-              class="cell"
-              src="./images/RectangleEvent(2)1280screen.png"
-              alt=""
-            >
-          </picture>
-
-        </div>
-
-        <div class="image-cell album__image-cell--3">
-          <picture>
-            <source srcset="./images/RectangleEvent(3)1280screen.png" media="(min-width: 1024px)">
-            <!-- <source srcset="./images/RectangleEvent(3)1280screen.png" media="(min-width: 1024px)"> -->
-            <img
-              class="cell-fit"
-              src="./images/RectangleEvent(3)1280screen.png"
-              alt=""
-            >
-          </picture>
-
-        </div>
-        <div class="image-cell album__image-cell--4">
-          <picture>
-            <source srcset="./images/RectangleEvent(4)1280screen.png" media="(min-width: 1024px)">
-            <img
-              class="cell-fit"
-              src="./images/RectangleEvent(4)1280screen.png"
-              alt=""
-            >
-          </picture>
-
-        </div>
-        <div class="image-cell album__image-cell--5">
-          <picture>
-            <source srcset="./images/RectangleEvent(extra1)1280screen.png" media="(min-width: 1800px)">
-            <img
-              class="cell-fit"
-              src="./images/RectangleEvent(extra1)1280screen.png"
-              alt=""
-            >
-          </picture>
-
-        </div>
-
-        <div class="image-cell album__image-cell--6">
-          <picture>
-            <source srcset="./images/RectangleEvent(extra2)1280screen.png" media="(min-width: 1800px)">
-            <img
-              class="cell-fit"
-              src="./images/RectangleEvent(extra2)1280screen.png"
-              alt=""
-            >
-          </picture>
-
-        </div>
-
-      </div>
-      <div class="galery__pages-toggler pages-toggler">
-        <div class="pages-toggler__page page--has-choosed "></div>
-        <div class="pages-toggler__page "></div>
-        <div class="pages-toggler__page "></div>
-        <div class="pages-toggler__page "></div>
-      </div>
-      <div class="ticket__button ticket__button--primary"></div>
-    </section>
-
-    <footer class="footer">
-      <section class="footer-top">
-        <div class="footer-top__subscribe subscribe">
-          <h2 class="subscribe__header">Підписка</h2>
-          <p class="subscribe__text">
-            Бути в курсі всіх актуальних подій та останніх новин.
-          </p>
-          <div class="subscribe__field field">
-            <input
-              class="field__email email"
-              type="text"
-              placeholder="E-mail"
-            >
-            <a class="ticket__button ticket__button--secondary">
+      <section class="galery page__galery container inner-padding">
+        <h2 class="galery__header">Галерея</h2>
+        <div class="galery__album album">
+          <div class="image-cell album__image-cell--1">
+            <picture>
+              <source srcset="./images/RectangleEvent(1)1280screen.png" media="(min-width: 1024px)">
               <img
-                class="ticket__svg"
-                src="./images/Vector.svg"
-                alt=""
-                >
-            </a>
+                class="cell-fit cell-fit--size"
+                src="./images/RectangleEvent(1)1280screen.png"
+                alt="national-clothes"
+              >
+            </picture>
           </div>
-        </div>
+          <div class="image-cell album__image-cell--2">
+            <picture>
+              <source srcset="./images/RectangleEvent(2)1280screen.png" media="(min-width: 1024px)">
+              <img
+                class="cell"
+                src="./images/RectangleEvent(2)1280screen.png"
+                alt="winter-picture"
+              >
+            </picture>
+          </div>
 
+          <div class="image-cell album__image-cell--3">
+            <picture>
+              <source srcset="./images/RectangleEvent(3)1280screen.png" media="(min-width: 1024px)">
+              <img
+                class="cell-fit"
+                src="./images/RectangleEvent(3)1280screen.png"
+                alt="garden-picture"
+              >
+            </picture>
+
+          </div>
+          <div class="image-cell album__image-cell--4">
+            <picture>
+              <source srcset="./images/RectangleEvent(4)1280screen.png" media="(min-width: 1024px)">
+              <img
+                class="cell-fit"
+                src="./images/RectangleEvent(4)1280screen.png"
+                alt="sea-picture"
+              >
+            </picture>
+
+          </div>
+          <div class="image-cell album__image-cell--5">
+            <picture>
+              <source srcset="./images/RectangleEvent(extra1)1280screen.png" media="(min-width: 1800px)">
+              <img
+                class="cell-fit"
+                src="./images/RectangleEvent(extra1)1280screen.png"
+                alt="animals-picture"
+              >
+            </picture>
+
+          </div>
+
+          <div class="image-cell album__image-cell--6">
+            <picture>
+              <source srcset="./images/RectangleEvent(extra2)1280screen.png" media="(min-width: 1800px)">
+              <img
+                class="cell-fit"
+                src="./images/RectangleEvent(extra2)1280screen.png"
+                alt="people-picture"
+              >
+            </picture>
+
+          </div>
+
+        </div>
+        <div class="galery__pages-toggler pages-toggler">
+          <div class="pages-toggler__page page--has-choosed "></div>
+          <div class="pages-toggler__page "></div>
+          <div class="pages-toggler__page "></div>
+          <div class="pages-toggler__page "></div>
+        </div>
+        <div class="ticket__button ticket__button--primary"></div>
       </section>
 
-      <section class="footer-bottom container inner-padding">
-        <div class="footer-bottom__left-side left-side">
-          <div class="left-side__icons icons">
-            <a href="http://namu.kiev.ua/">
-              <img
-              class="icons__namu"
-              src="./images/NA MU.svg"
-              alt=""
-            >
-            </a>
-            <div class="icons__network">
-              <a href="https://uk-ua.facebook.com/">
+      <footer class="footer page__footer">
+        <section class="footer-top footer__footer-top">
+          <div class="footer-top__subscribe subscribe">
+            <h2 class="subscribe__header">Підписка</h2>
+            <p class="subscribe__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <div class="subscribe__field field">
+              <input
+                class="field__email email"
+                type="text"
+                placeholder="E-mail"
+              >
+              <a class="ticket__button ticket__button--secondary">
                 <img
-                  class="icons__facebook"
-                  src="./images/facebook.svg"
-                  alt="facebook"
-                >
-              </a>
-              <a href="https://www.instagram.com/">
-                <img
-                  class="icons__instagram"
-                  src="./images/instagram.svg"
-                  alt="instagram"
+                  class="ticket__svg"
+                  src="./images/Vector.svg"
+                  alt="arrow-svg"
                 >
               </a>
             </div>
+          </div>
+        </section>
 
+        <section class="footer-bottom page__footer-bottom container inner-padding">
+          <div class="footer-bottom__left-side left-side">
+            <div class="left-side__icons icons">
+              <a href="http://namu.kiev.ua/">
+                <img
+                class="icons__namu"
+                src="./images/NA MU.svg"
+                alt="logotype"
+              >
+              </a>
+              <div class="icons__network">
+                <a href="https://uk-ua.facebook.com/">
+                  <img
+                    class="icons__facebook"
+                    src="./images/facebook.svg"
+                    alt="facebook"
+                  >
+                </a>
+                <a href="https://www.instagram.com/">
+                  <img
+                    class="icons__instagram"
+                    src="./images/instagram.svg"
+                    alt="instagram"
+                  >
+                </a>
+              </div>
           </div>
 
+            <div class="shedule shedule--padding">
+              <p class="shedule__header">Графік роботи</p>
 
-          <div class="shedule shedule--padding">
-            <p class="shedule__header">Графік роботи</p>
+              <p class="shedule__days">
+                <span>12:00 — 20:00</span> середа<br>
+                <span>12:00 — 20:00</span> четвер<br>
+                <span>12:00 — 20:00</span> п’ятниця<br>
+                <span>11:00 — 19:00</span> субота<br>
+                <span>11:00 — 19:00</span> неділя<br>
+                <br>
+                Вихідні понеділок,<br>
+                вівторок<br>
+                Каса припиняє роботу <br>
+                за 1 годину<br>
+                до закриття музею
 
-            <p class="shedule__days">
-              <span>12:00 — 20:00</span> середа<br>
-              <span>12:00 — 20:00</span> четвер<br>
-              <span>12:00 — 20:00</span> п’ятниця<br>
-              <span>11:00 — 19:00</span> субота<br>
-              <span>11:00 — 19:00</span> неділя<br>
-              <br>
-              Вихідні понеділок,<br>
-              вівторок<br>
-              Каса припиняє роботу <br>
-              за 1 годину<br>
-              до закриття музею
+              </p>
+            </div>
+            <div class="shedule">
+              <p class="shedule__header">Контакти:</p>
 
-            </p>
-
-
-
+              <p class="shedule__days">
+                вул. М. Грушевського, 6; Київ, <br>
+                01001 <br>
+                тел. +38 (044) 278-13-57<br>
+                факс +38 (044) 278-74-54<br>
+                e-mail: info@namu.kiev.ua<br>
+              </p>
+            </div>
           </div>
-          <div class="shedule">
-            <p class="shedule__header">Контакти:</p>
 
-            <p class="shedule__days">
-              вул. М. Грушевського, 6; Київ, <br>
-              01001 <br>
-              тел. +38 (044) 278-13-57<br>
-              факс +38 (044) 278-74-54<br>
-              e-mail: info@namu.kiev.ua<br>
-            </p>
-          </div>
-        </div>
+          <div class="footer-bottom__right-side right-side">
+            <div class="right-side__tabs tabs">
+              <ul class="tabs__list list">
 
-        <div class="footer-bottom__right-side right-side">
-          <div class="right-side__tabs tabs">
-            <ul class="tabs__list list">
-
-              <li class="list__item item">
-                <a class="item__link link" href="">Галерея</a>
-              </li>
-              <li class="list__item item">
-                <a class="item__link link" href="">Виставки та події</a>
-              </li>
-              <li class="list__item item">
-                <a class="item__link link" href="">Відвідування</a>
-              </li>
-              <li class="list__item item">
-                <a class="item__link link" href="">Стати нашим другом</a>
-              </li>
-
-            </ul>
-          </div>
+                <li class="list__item item">
+                  <a class="item__link link" href="">Галерея</a>
+                </li>
+                <li class="list__item item">
+                  <a class="item__link link" href="">Виставки та події</a>
+                </li>
+                <li class="list__item item">
+                  <a class="item__link link" href="">Відвідування</a>
+                </li>
+                <li class="list__item item">
+                  <a class="item__link link" href="">Стати нашим другом</a>
+                </li>
+              </ul>
+            </div>
 
           <div class="right-side__tabs tabs">
             <ul class="tabs__list list">
@@ -339,16 +335,15 @@
                 <a class="item__link link" href="#">Контакти</a>
               </li>
             </ul>
-
           </div>
         </div>
       </section>
-      <div class="footer-bottom__date date container">
-        <p class="date__copyright">Copyright © 2019. All Rights Reserved.</p>
-        <p class="date__creator">Designed by Zhyriada Marina</p>
-      </div>
+        <div class="footer-bottom__date date container">
+          <p class="date__copyright">Copyright © 2019. All Rights Reserved.</p>
+          <p class="date__creator">Designed by Zhyriada Marina</p>
+        </div>
     </footer>
-
+  </section>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
