footer menu fixed

--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,7 @@
         </div>
         <div class="footer__work-shedule">
           <span class="footer__work-heading">Графік роботи</span>
-          <p class="footer__work-title">
+          <p class="footer__work-title footer__grid">
             <span class="footer__work-strong">12:00 — 20:00</span> середа
             <span class="footer__work-strong">12:00 — 20:00</span> четвер
             <span class="footer__work-strong">12:00 — 20:00</span> п’ятниця
