mistakes were fixded

--- a/src/index.html
+++ b/src/index.html
@@ -17,28 +17,28 @@
   <section class="page">
     <section class="header page__header">
       <nav role="navigation" class="navigation">
-        <div id="menuToggle">
+        <div id="menuToggle" class="menuToggle">
           <input type="checkbox">
 
           <span></span>
           <span></span>
           <span></span>
 
-          <ul id="menu">
+          <ul id="menu-list" class="menu-list">
             <li>
-              <a href="#">Галерея</a>
+              <a class="menu__toggle-link toggle-link" href="#">Галерея</a>
             </li>
             <li>
-              <a href="#">Вистаки та події</a>
+              <a class="menu__toggle-link toggle-link" href="#">Вистаки та події</a>
             </li>
             <li>
-              <a href="#">Відвідування</a>
+              <a class="menu__toggle-link toggle-link" href="#">Відвідування</a>
             </li>
             <li>
-              <a href="#">Стати нашим другом</a>
+              <a class="menu__toggle-link toggle-link" href="#">Стати нашим другом</a>
             </li>
             <li>
-              <a href="#">Про нас</a>
+              <a class="menu__toggle-link toggle-link" href="#">Про нас</a>
             </li>
           </ul>
         </div>
@@ -81,9 +81,8 @@
       <h2 class="main-events__header">Актуальні події</h2>
 
       <div class="wrap-event">
-
         <img
-          class="cell-fit cell-fit--1"
+          class="image-cell image-cell--1"
           src="./images/RectangleEvent1_870.png"
           alt="image"
         >
@@ -102,7 +101,7 @@
         </div>
 
         <img
-          class="cell-fit cell-fit--2"
+          class="image-cell image-cell--2"
           src="./images/RectangleEvent2_870.png"
           alt="nature-image"
         >
@@ -145,7 +144,7 @@
             <picture>
               <source srcset="./images/RectangleEvent(1)1280screen.png" media="(min-width: 1024px)">
               <img
-                class="cell-fit cell-fit--size"
+                class="image-cell image-cell--size"
                 src="./images/RectangleEvent(1)1280screen.png"
                 alt="national-clothes"
               >
@@ -166,7 +165,7 @@
             <picture>
               <source srcset="./images/RectangleEvent(3)1280screen.png" media="(min-width: 1024px)">
               <img
-                class="cell-fit"
+                class="image-cell"
                 src="./images/RectangleEvent(3)1280screen.png"
                 alt="garden-picture"
               >
@@ -177,7 +176,7 @@
             <picture>
               <source srcset="./images/RectangleEvent(4)1280screen.png" media="(min-width: 1024px)">
               <img
-                class="cell-fit"
+                class="image-cell"
                 src="./images/RectangleEvent(4)1280screen.png"
                 alt="sea-picture"
               >
@@ -188,7 +187,7 @@
             <picture>
               <source srcset="./images/RectangleEvent(extra1)1280screen.png" media="(min-width: 1800px)">
               <img
-                class="cell-fit"
+                class="image-cell"
                 src="./images/RectangleEvent(extra1)1280screen.png"
                 alt="animals-picture"
               >
@@ -200,7 +199,7 @@
             <picture>
               <source srcset="./images/RectangleEvent(extra2)1280screen.png" media="(min-width: 1800px)">
               <img
-                class="cell-fit"
+                class="image-cell"
                 src="./images/RectangleEvent(extra2)1280screen.png"
                 alt="people-picture"
               >
@@ -210,7 +209,7 @@
 
         </div>
         <div class="galery__pages-toggler pages-toggler">
-          <div class="pages-toggler__page page--has-choosed "></div>
+          <div class="pages-toggler__page page--is-active "></div>
           <div class="pages-toggler__page "></div>
           <div class="pages-toggler__page "></div>
           <div class="pages-toggler__page "></div>
@@ -306,16 +305,16 @@
               <ul class="tabs__list list">
 
                 <li class="list__item item">
-                  <a class="item__link link" href="">Галерея</a>
+                  <a class="item__link link" href="#">Галерея</a>
                 </li>
                 <li class="list__item item">
-                  <a class="item__link link" href="">Виставки та події</a>
+                  <a class="item__link link" href="#">Виставки та події</a>
                 </li>
                 <li class="list__item item">
-                  <a class="item__link link" href="">Відвідування</a>
+                  <a class="item__link link" href="#">Відвідування</a>
                 </li>
                 <li class="list__item item">
-                  <a class="item__link link" href="">Стати нашим другом</a>
+                  <a class="item__link link" href="#">Стати нашим другом</a>
                 </li>
               </ul>
             </div>
