--- a/src/index.html
+++ b/src/index.html
@@ -224,20 +224,21 @@
             <p class="subscribe__text">
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
-            <div class="subscribe__field field">
+            <form class="subscribe__field field">
               <input
                 class="field__email email"
-                type="text"
+                type="email"
                 placeholder="E-mail"
+                required
               >
-              <a class="ticket__button ticket__button--secondary">
+              <button class="ticket__button ticket__button--secondary" type="submit" value=''>
                 <img
                   class="ticket__svg"
                   src="./images/Vector.svg"
                   alt="arrow-svg"
                 >
-              </a>
-            </div>
+              </button>
+            </form>
           </div>
         </section>
 
@@ -252,14 +253,14 @@
               >
               </a>
               <div class="icons__network">
-                <a href="https://uk-ua.facebook.com/">
+                <a href="https://www.facebook.com/namu.museum/">
                   <img
                     class="icons__facebook"
                     src="./images/facebook.svg"
                     alt="facebook"
                   >
                 </a>
-                <a href="https://www.instagram.com/">
+                <a href="https://www.instagram.com/osvita.namu/">
                   <img
                     class="icons__instagram"
                     src="./images/instagram.svg"
