Fixed: according BEM methodology

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
       <div class="centered">
         <section class="section" id="events">
           <h2 class="section__title">Актуальні події</h2>
-          <div class="event event--left">
+          <div class="event centered event--left">
             <img class="image event__image"
               src="./images/photos/events/2.png"
               alt="ВИСТАВКА Йду і повертаюсь"
@@ -135,7 +135,7 @@
           </div>
         </section>
 
-        <section class="gallery" id="gallery">
+        <section class="gallery bottom-margined" id="gallery">
           <h2 class="section__title">Галерея</h2>
           <div class="gallery__images">
             <img
@@ -225,7 +225,7 @@
           </div>
           <div class="footer__schedule">
             <div class="footer__schedule-left">
-              <p class="footer__paragraph bottom-margined">
+              <p class="footer__paragraph paragraph-margined">
                 Графік роботи
               </p>
               <p class="footer__paragraph">
@@ -240,7 +240,7 @@
               <p class="footer__paragraph">
                 <strong>11:00 — 19:00</strong> субота
               </p>
-              <p class="footer__paragraph bottom-margined">
+              <p class="footer__paragraph paragraph-margined">
                 <strong>11:00 — 19:00</strong> неділя
               </p>
               <p class="footer__paragraph">
@@ -249,7 +249,7 @@
               </p>
             </div>
             <div class="footer__schedule-right">
-              <p class="footer__paragraph bottom-margined">
+              <p class="footer__paragraph paragraph-margined">
                 Контакти:
               </p>
               <p class="footer__paragraph">
@@ -315,7 +315,7 @@
 
       </div>
       <div class="footer__copyright">
-        <p class="bottom-margined">Designed by Zhyriada Marina</p>
+        <p class="paragraph-margined">Designed by Zhyriada Marina</p>
         <p>Copyright © 2021. All Rights Reserved.</p>
       </div>
     </footer>
