Small fix for form

--- a/src/index.html
+++ b/src/index.html
@@ -178,6 +178,7 @@
             <input
               type="text"
               class="subscribe__email"
+              name="email"
               placeholder="Email"
               required
             >
