--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Museum</title>
+    <link rel="icon" href="./images/header/NA MU.svg">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@300;400;500;700&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="./styles/styles.scss">
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <!-- <header class="header">
+      <div class="header__content">
+        <div class="header__top">
+          <div class="burger-menu">
+            <input type="checkbox" class="burger-menu__check-box"
+              id="check-menu">
+            <label class="burger-menu__label" for="check-menu"></label>
+            <nav class="nav burger-menu__nav">
+              <div class="nav__wrapper">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a href="#gallery" class="nav__link">Галерея</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#events" class="nav__link">Виставки та події</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#visiting" class="nav__link">Відвідування</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#friends" class="nav__link">Стати нашим другом</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#about-us" class="nav__link">Про нас</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#shop" class="nav__link">Магазин</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#blog" class="nav__link">Блог</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#contacts" class="nav__link">Контаки</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+          <a href="#" class="logo header__logo">
+            <img src="./images/header/NA MU.svg">
+          </a>
+        </div>
+        <div class="header__main">
+          <h1 class="header__title">
+            Худож<span class="">ній</span><br>
+            Музей
+          </h1>
+          <a href="#" class="header__button">
+            Квитки
+          </a>
+        </div>
+      </div>
+      </div>
+    </header> -->
+    <main class="main">
+      <section class="main__events">
+        <h2 class="main__events-title">Актуальні події</h2>
+        <div class="event event__first">
+          <img
+            src="./images/events/I go and come back.png"
+            class="event__img"
+            alt="I go and come back"
+          >
+          <div class="event__description">
+            <div class="event__exhibition">
+              <div class="event__exhibition-title">
+                Виставка
+              </div>
+              <div class="event__exhibition-date">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <h3 class="event__description-title">
+              Йду і повертаюсь
+            </h3>
+            <p class="event__description-text">
+              Національний Художній Музей України презентує
+              унікальну частину колекції Градобанку -
+              українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </div>
+        <div class="event event__second">
+          <div class="event__description event__description--second">
+            <div class="event__exhibition">
+              <div class="event__exhibition-title">
+                Виставка
+              </div>
+              <div class="event__exhibition-date">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <h3 class="event__description-title">
+              І спогади і мрії
+            </h3>
+            <p class="event__description-text">
+              Національний художній музей України до 100
+              річчя від дня народження видатної української
+              художниці Тетяни Яблонської відкриває
+              ретроспективну ювілейну виставку «І спогади і
+              мрії».
+            </p>
+          </div>
+          <img
+            src="./images/events/memories and dreams.png"
+            class="event__img"
+            alt="memories and dreams"
+          >
+        </div>
+      </section>
+
+      <section class="lecture lecture__wrapper">
+        <div class="lecture__content">
+          <div class="lecture__info-wrapper">
+            <div class="lecture__info">
+              <div class="lecture__title">
+                Лекція
+              </div>
+              <div class="lecture__date">
+                26/08/2019 - 11:00
+              </div>
+            </div>
+            <div class="lecture__text">
+              Від класицизму до романтизму
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery gallery__wrapper">
+        <h2 class="gallery__title">
+          Галерея
+        </h2>
+        <div class="gallery__pictures">
+          <img
+            src="./images/gallery/img-1.png"
+            class="gallery__img"
+            alt="img-1"
+          >
+          <img
+            src="./images/gallery/img-2.png"
+            class="gallery__img"
+            alt="img-2"
+          >
+          <img
+            src="./images/gallery/img-3.png"
+            class="gallery__img"
+            alt="img-3"
+          >
+          <img
+            src="./images/gallery/img-4.png"
+            class="gallery__img"
+            alt="img-4"
+          >
+          <img
+            src="./images/gallery/img-5.png"
+            class="gallery__img"
+            alt="img-5"
+          >
+          <img
+            src="./images/gallery/img-6.png"
+            class="gallery__img"
+            alt="img-6"
+          >
+        </div>
+        <div class="gallery__dots gallery__dots--active_1">
+          <div class="gallery__dot"></div>
+          <div class="gallery__dot"></div>
+          <div class="gallery__dot"></div>
+          <div class="gallery__dot"></div>
+        </div>
+      </section>
+
+      <section class="subscription subscription__wrapper">
+        <h2 class="subscription__title">
+          Підписка
+        </h2>
+        <div class="subscription__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </div>
+        <form
+          action=""
+          method="GET"
+          class="subscription__form"
+        >
+          <label for="email">
+            <input
+              type="email"
+              name="email"
+              class="subscription__input"
+              id="email" placeholder="E-mail"
+              required
+            >
+          </label>
+          <button type="submit" class="subscription__btn"></button>
+        </form>
+      </section>
+
+      <section class="footer">
+      </section>
+    </main>
   </body>
+
 </html>
