--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="header__content">
         <div class="header__top">
           <div class="burger-menu">
@@ -52,7 +52,7 @@
             </nav>
           </div>
           <a href="#" class="logo header__logo">
-            <img src="./images/header/NA MU.svg">
+            <img src="./images/header/NA MU.svg" alt="logo">
           </a>
         </div>
         <div class="header__main">
@@ -65,8 +65,7 @@
           </a>
         </div>
       </div>
-      </div>
-    </header> -->
+    </header>
     <main class="main">
       <section class="main__events">
         <h2 class="main__events-title">Актуальні події</h2>
@@ -211,10 +210,8 @@
           <button type="submit" class="subscription__btn"></button>
         </form>
       </section>
-
-      <section class="footer">
-      </section>
     </main>
+
   </body>
 
 </html>
